create service foreground

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,24 +8,31 @@
         android:name="android.hardware.camera"
         android:required="false" />
 
+
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" /> <!-- Include this permission to grab user's general location -->
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" /> <!-- Include this permission to grab user's general location -->
     <uses-permission android:name="android.permission.CAMERA" /> <!-- Include this permission to grab user's general location -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" /> <!-- Include only if your app benefits from precise location access. -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission
+        android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
 
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/app_icon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/app_icon"
         android:supportsRtl="true"
         android:theme="@style/Theme.OneStep"
         tools:targetApi="31">
         <service
+            android:foregroundServiceType="location"
             android:name=".feature_tracking.data.data_source.foreground_service.LocationTrackingService"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true"
+            tools:ignore="ForegroundServicePermission"></service>
 
         <activity
             android:name=".MainActivity"
